<resources>
    <string name="app_name">Bé học tiếng việt</string>
    <string name="NApp">Bé Vui Học \n Từ Điển Hình ảnh cho bé</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>

    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="timchucai">Tìm chữ cái</string>
    <string name="ghepchu">Ghép chữ</string>
    <string name="tritue">Trò chơi trí tuệ (cho trẻ 4-6 tuổi)</string>
    <string name="trolai">Quay lại</string>
    <string name="hello_world">Points</string>
    <string name="_text">Tìm chữ cái đúng với phát âm</string>
</resources>
